--- a/TestIngresso.html
+++ b/TestIngresso.html
@@ -7,7 +7,6 @@
 <html>
 	<head>
 		<title>Test Ingresso</title>
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -41,15 +40,17 @@
 						<!-- Nav -->
                         <nav id="nav">
                             <br>
-                            <h1 id="logo"><a href="#">Universitalia</a></h1><br><br><br>
-                            <ul id="icone">
+                            <h1 id="logo"><a href="#">Test d'ingresso</a></h1>
+                            <p>Prepara il tuo test d'ingresso all'università con i nostri libri, successo assicurato!</p>
+                            <br><br><br>
+                            <ul>
                                 <li>
                                     <a class="fa fa-home" href="index.html"><span>Home</span></a>
                                     <ul>
-                                        <li><a href="#chisiamo">Chi siamo</a></li>
-                                        <li><a href="#dovesiamo">Dove siamo</a></li>
-                                        <li><a href="#rilegaturatesi">Rilegature Tesi</a></li>
-                                        <li><a href="#news">News</a></li>
+                                        <li><a href="index.html#chisiamo">Chi siamo</a></li>
+                                        <li><a href="index.html#dovesiamo">Dove siamo</a></li>
+                                        <li><a href="rilegaturaTesi.html">Rilegature Tesi</a></li>
+                                        <li><a href="index.html#news">News</a></li>
 
                                     </ul>
 
@@ -57,16 +58,16 @@
                                 <li>
                                     <a href="" class="fa fa-book"><span>Libri</span></a>
                                     <ul>
-                                        <li><a href="#libreriaonline">Ricerca Libri</a></li>
+                                        <li><a href="index.html#libreriaonline">Ricerca Libri</a></li>
                                         <li><a href="testIngresso.html">Test d'ingresso</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="rilegaturaTesi.html" class="fa fa-graduation-cap"><span>Rilegatura Tesi</span></a>
+                                    <a href="rilegaturaTesi.html" class="fa fa-bookmark"><span>Rilegatura Tesi</span></a>
                                 </li>
 
                                 <li>
-                                    <a href="" class="fa fa-print"><span>Stampe Digitali</span></a>
+                                    <a href="" class="fa fa-tasks"><span>Servizi</span></a>
                                     <ul>
                                         <li><a href="plotter.html">Plotter</a></li>
                                         <li><a href="stampe.html">Stampe</a></li>
@@ -74,13 +75,10 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="" class="fa fa-book"><span>Editoria</span></a>
+                                    <a href="" class="fa fa-bookmark-o"><span>Editoria</span></a>
                                     <ul>
                                         <li><a href="http://universitaliaeditrice.it/" target="_blank">Pubblica con noi</a></li>
                                     </ul>
-                                </li>
-                                <li>
-                                    <a href="" class="fa fa-shopping-cart"><span>UniShop</span></a>
                                 </li>
                             </ul>
                         </nav>
