--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
         <script src="js/js_check_form/check_form.js"></script>
-        <script src="js/angular.min.js"></script>
+
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -211,7 +211,7 @@
 						<div class="row">
 							<div class="6u">
 								<section>
-									<form method="post" action="php/mail.php" name="contactform" id="contact">
+									<form method="post" action="php/mail.php" name="contactform" id="contact" target="_parent">
 										<div class="row half">
 											<div class="6u">
 												<input id="name" name="name" placeholder="Nome" type="text" class="text" required="required" ng-model="name"/>
